[package]
name = "redbpf-example"
version = "0.1.0"
authors = ["k273017 <kensukekubo19@gmail.com>"]
edition = "2018"

[build-dependencies]
cargo-bpf = { version = "1.3", default-features = false, features = ["build"] }

[dependencies]
probes = { path = "./probes" }
redbpf = { version = "1.3", features = ["load"] }
tokio = { version = "^0.2.4", features = ["signal", "time", "io-util", "net", "sync", "macros"] }
futures = "0.3"
getopts = "0.2"
libc = "0.2"
