[package]
name = "probes"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = "2.0.0"
redbpf-probes = "2.0.0"
memoffset = "0.6.1"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

[build-dependencies]
cargo-bpf = { version = "2.0.0", default-features = false, features = ["bindings"] }
bpf-sys = { version = "2.0.0" }
cc = "1.0"
bindgen = {version = "0.59.1", default-features = false, features = ["runtime"]}
libc = "0.2"
glob = "0.3.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"


[[bin]]
name = "bash-readline"
path = "src/bash_readline/main.rs"
required-features = ["probes"]

[[bin]]
name = "block_http"
path = "src/block_http/main.rs"
required-features = ["probes"]
