[package]
name = "bash-readline"
version = "0.0.1"
authors = ["Duan Jiong <djduanjiong@gmail.com>"]
edition = "2018"

[[bin]]
name = "bash-readline"
path = "src/main.rs"
#required-features = ["command-line"]

[build-dependencies]
cargo-bpf = { version = "2.0.0", default-features = false, features = ["build", "llvm12"] }

[dependencies]
probes = { path = "../../probes" }
redbpf = { version = "2.0.0", features = ["load"] }
tokio = { version = "1.0.0", features = ["signal", "time", "io-util", "net", "sync", "macros", "rt-multi-thread"] }
futures = "0.3"
getopts = "0.2"
libc = "0.2"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"